# epdm-drawing-gen

./: .gitignore  README.md  legacy_example.py  main.py  pyproject.toml
api/: __init__.py  main.py  routes.py  storage.py
drawing_generator/: __init__.py  config.py  generator.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DrawingDrawer.tsx  DrawingsTable.tsx  EmptyState.tsx  GenerateModal.tsx  Header.tsx  TopBar.tsx
frontend/src/lib/: api.ts  types.ts
tests/: test_generator.py
